--- a/twitter_clone/tweets/templates/tweets/tweet_form_snippet.html
+++ b/twitter_clone/tweets/templates/tweets/tweet_form_snippet.html
@@ -17,7 +17,7 @@
             </div>
             <div class="tweet-form-footer d-flex flex-row align-items-center justify-content-end" id="tweet-form-footer{{ id }}">
                 <span class="chars-counter visually-hidden mx-3" id="chars-counter{{ id }}"></span>
-                <input type="submit" class="make-tweet-btn fw-bold btn rounded-pill" id="make-tweet-btn{{ id }}" value="Ответить" disabled>
+                <input type="submit" class="make-tweet-btn fw-bold btn rounded-pill" id="make-tweet-btn{{ id }}" value="{{ submit_value }}" disabled>
         </form>
             </div>
         </form>
