--- a/twitter_clone/main_app/static/main_app/css/base_main_app_styles.css
+++ b/twitter_clone/main_app/static/main_app/css/base_main_app_styles.css
@@ -82,3 +82,9 @@
 @media (min-width: 720px) {
     .content-width {width: 600px;}
 }
+
+.header-name span {
+    color: rgb(15, 20, 25);
+    font-size: 20px;
+    font-weight: 700;
+}
