--- a/twitter_clone/main_app/templates/main_app/_left_sidebar_nav.html
+++ b/twitter_clone/main_app/templates/main_app/_left_sidebar_nav.html
@@ -4,7 +4,7 @@
     <div class="d-flex flex-column sticky-top p-3" style="height: 100vh;">
         <ul class="nav d-flex flex-column mb-3">
             <li class="nav-item-logo align-self-start rounded-pill mb-3">
-                <a href="#" class="nav-link link-dark fs-5">
+                <a href="{% url 'main_app:home' %}" class="nav-link link-dark fs-5">
                     <div class="d-flex flex-row align-items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="rgb(29,161,242)" class="" viewBox="0 0 16 16">
                             <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
@@ -14,7 +14,7 @@
             </li>
             {% if user.is_authenticated %}
                 <li class="nav-item align-self-start rounded-pill mb-3">
-                    <a href="#" class="nav-link link-dark fs-5">
+                    <a href="{% url 'main_app:home' %}" class="nav-link link-dark fs-5">
                         <div class="d-flex flex-row align-items-center">
                             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
