--- a/twitter_clone/tweets/static/tweets/css/tweets_styles.css
+++ b/twitter_clone/tweets/static/tweets/css/tweets_styles.css
@@ -44,10 +44,15 @@ textarea {
     text-decoration: underline;
 }
 
-.retweet-info-text span {
+.retweet-info-text a {
     font-size: 13px;
     color: rgb(83, 100, 113);
     font-weight: 700;
+    text-decoration: none;
+}
+
+.retweet-info-text a:hover {
+    text-decoration: underline;
 }
 
 .tweet {
@@ -76,7 +81,8 @@ textarea {
 .retweet-tweet,
 .like-tweet,
 .tweet-others,
-.username-link {
+.username-link,
+.retweet-info-text {
     z-index: 20;
     position: relative;
 }
