--- a/twitter_clone/user_profile/static/user_profile/css/profile_styles.css
+++ b/twitter_clone/user_profile/static/user_profile/css/profile_styles.css
@@ -1,19 +1,19 @@
 /* NAVIGATION */
 
-.nav-item.profile.active {
+.nav-item.header.active {
     position: relative;
 }
 
-.nav-item.profile .nav-link {
+.nav-item.header .nav-link {
     color: rgb(83, 100, 113);
 }
 
-.nav-item.profile.active .nav-link {
+.nav-item.header.active .nav-link {
     color: rgb(15, 20, 25);
     font-weight: 700;
 }
 
-.nav-item.profile.active .nav-link::after {
+.nav-item.header.active .nav-link::after {
     position: absolute;
     bottom: 0;
     left: 0;
