search v3.0 n right sidebar

--- a/twitter_clone/explore/templates/explore/_search_form_snippet.html
+++ b/twitter_clone/explore/templates/explore/_search_form_snippet.html
@@ -1,7 +1,7 @@
 {% load widget_tweaks %}
 {% load explore_template_utils %}
 
-<div class="search-form px-5 py-2">
+<div class="search-form py-2">
     <form action="{% url 'explore:search' %}" method="get">
         <div class="search-input">
             {% render_field search_form.q class="form-control form-control-lg" placeholder="Поиск в твиттере" %}
