--- a/twitter_clone/tweets/templates/tweets/detail_tweet_snippet.html
+++ b/twitter_clone/tweets/templates/tweets/detail_tweet_snippet.html
@@ -21,7 +21,7 @@
     <!-- Блок с контентом твита(текст, фотографии и т.д.) -->
     <div class="detail-tweet-content mb-3" id="detail-tweet-content{{ detail_tweet.id }}" style="z-index: 100;">
         <div class="tweet-text fs-4" id="tweet-text{{ detail_tweet.id }}">
-            {% replace_usernames_with_links text=detail_tweet.text|linebreaksbr tweet=detail_tweet %}
+            {% replace_text_with_links text=detail_tweet.text|linebreaksbr tweet=detail_tweet %}
         </div>
     </div>
 
