--- a/twitter_clone/main_app/static/main_app/css/base_main_app_styles.css
+++ b/twitter_clone/main_app/static/main_app/css/base_main_app_styles.css
@@ -97,3 +97,10 @@
     border-radius: 16px;
     border-width: 1px;
 }
+
+/* ERROR PAGES */
+
+.message-404,
+.message-505 {
+    color: rgb(83, 100, 113);
+}
